<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="4"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_ac"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:backgroundTint="@color/textViewBackLightGray"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_percent"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackLightGray"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackOrange"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mult"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackOrange"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_min"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackOrange"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackOrange"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackGray"/>
    <Button
        android:id="@+id/button_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_equal"
        android:layout_columnWeight="1"
        android:backgroundTint="@color/textViewBackOrange"
        android:textSize="18sp"/>

</GridLayout>